--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST}:3306/toft?allowPublicKeyRetriev
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql = true
+
+server.error.include-stacktrace=never
