--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,6 +12,20 @@ env:
 
 jobs:
 
+  build-jar:
+    
+    runs-on: ubuntu-latest
+  
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+          
+      - name: build with maven
+        run: mvn clean package --file pom.xml
+        
   build-and-push-image:
     runs-on: ubuntu-latest
     
