--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,7 +22,7 @@ jobs:
   
     steps:
       - uses: actions/checkout@v2
-      - name: Set up JDK 1.8
+      - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
           java-version: 11
@@ -30,19 +30,30 @@ jobs:
       - name: build with maven
         run: mvn clean package --file pom.xml 
     
-      - name: copy file via ssh key
-        uses: appleboy/scp-action@master
-        env:
-          HOST: ${{ secrets.HOST }}
-          USERNAME: ${{ secrets.USERNAME }}
-          PORT: ${{ secrets.PORT }}
-          KEY: ${{ secrets.KEY }}
+      - uses: actions/upload-artifact@v1
         with:
-          source: "./target/*.jar"
-          target: "/target/"
+         name: toftws-0.0.1-SNAPSHOT
+         path: target/
+        
+  build-and-deploy-image:
+    
+    needs: [build-jar]
+    
+    runs-on: ubuntu-latest
+    
+    permissions:
+      contents: read
+      packages: write
+  
+    steps:
         
       - name: Checkout repository
         uses: actions/checkout@v2
+        
+      - uses: actions/download-artifact@v1
+        with:
+          name: toftws-0.0.1-SNAPSHOT
+          path: target/
         
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
