--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,6 +15,7 @@ jobs:
   build-jar:
     
     runs-on: ubuntu-latest
+    if: "contains(github.event.head_commit.message, '[stable]')"
     
     permissions:
       contents: read
