--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,15 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST}:3306/toft?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
-spring.jpa.show-sql = true
+
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+
+spring.jpa.show-sql = false
 
 server.error.include-stacktrace=never
+spring.mvc.log-resolved-exception=false
+spring.jackson.locale=en
+spring.web.locale=en
+
+spring.jackson.mapper.accept-case-insensitive-enums=true
+
