--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,9 @@
-
 server.port=8080
 
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST}:3306/toft?allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=${SQL_USERNAME}
+spring.datasource.password=${SQL_PASSWORD}
 
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
