--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 server.port=8080
 
-spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST}:3306/toft?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=${SQL_USERNAME}
 spring.datasource.password=${SQL_PASSWORD}
@@ -15,3 +14,9 @@ spring.jackson.locale=en
 spring.web.locale=en
 
 spring.jackson.mapper.accept-case-insensitive-enums=true
+
+spring.flyway.user=${SQL_USERNAME}
+spring.flyway.password=${SQL_PASSWORD}
+spring.flyway.schemas=${SQL_SCHEMA}
+
+spring.flyway.baseline-on-migrate=true
