--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,4 +19,5 @@ spring.flyway.user=${SQL_USERNAME}
 spring.flyway.password=${SQL_PASSWORD}
 spring.flyway.schemas=${SQL_SCHEMA}
 
+spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate=true
