--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,7 @@
 #spring.jpa.show-sql=true
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.orm.jdbc.bind=TRACE
+#spring.jpa.properties.hibernate.format_sql=true
 
 server.error.include-stacktrace=always
 spring.mvc.log-resolved-exception=true
