--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,28 +1,14 @@
-version: "3.8"
-
 services:
-  app:
-    container_name: toft_app
-    pull_policy: always
-    image: ghcr.io/mathiasschoettle/tooloftools:main
-    ports:
-      - "8080:8080"
-    environment:
-      MYSQL_HOST: mysql
-      MYSQL_USER: root
-      MYSQL_PASSWORD: root
-      MYSQL_DB: toft
-
-  mysql:
-    container_name: toft_db
-    image: ubuntu/mysql
-    ports:
-      - "3306:3306"
+  database:
+    container_name: toft_db_local
+    image: 'mysql:latest'
     volumes:
-      - toft-mysql-data:/var/lib/mysql
+      - toft-data-local:/home/app/data
+    ports:
+      - '3306:3306'
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DB: toft
+      MYSQL_DATABASE: toft
 
 volumes:
-  toft-mysql-data:
+  toft-data-local:
