--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <name>toftws</name>
     <description>toftws</description>
     <properties>
-        <java.version>18</java.version>
+        <java.version>21</java.version>
     </properties>
     <dependencies>
 
@@ -49,6 +49,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-docker-compose</artifactId>
+            <optional>true</optional>
         </dependency>
 
         <dependency>
@@ -94,6 +100,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
+                    <finalName>app</finalName>
                     <excludes>
                         <exclude>
                             <groupId>org.projectlombok</groupId>
