update config parameters - add security logging for testing - disabled white label error page with default tomcat error view

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,3 +2,4 @@ server.error.include-stacktrace=always
 spring.mvc.log-resolved-exception=true
 
 spring.docker.compose.file=./dev-compose.yaml
+#logging.level.org.springframework.security=DEBUG
