--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,6 @@ spring.flyway.schemas=${SQL_SCHEMA}
 
 spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate=true
+
+server.error.whitelabel.enabled=false
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.web.servlet.error.ErrorMvcAutoConfiguration
