initial thymeleaf tests

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,3 +3,5 @@ spring.mvc.log-resolved-exception=true
 
 spring.docker.compose.file=./dev-compose.yaml
 #logging.level.org.springframework.security=DEBUG
+
+spring.thymeleaf.cache=false
