--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,4 +22,6 @@ spring.flyway.schemas=${SQL_SCHEMA}
 spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate=true
 
+spring.mvc.hiddenmethod.filter.enabled=true
+
 server.error.whitelabel.enabled=false
