--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,12 +15,7 @@ spring.web.locale=en
 
 spring.jackson.mapper.accept-case-insensitive-enums=true
 
-spring.flyway.user=${SQL_USERNAME}
-spring.flyway.password=${SQL_PASSWORD}
-spring.flyway.schemas=${SQL_SCHEMA}
-
-spring.flyway.enabled=true
-spring.flyway.baseline-on-migrate=true
+spring.mvc.hiddenmethod.filter.enabled=true
 
 server.error.whitelabel.enabled=false
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.web.servlet.error.ErrorMvcAutoConfiguration
