--- a/pom.xml
+++ b/pom.xml
@@ -94,8 +94,8 @@
 
         <dependency>
             <groupId>com.itextpdf</groupId>
-            <artifactId>itextpdf</artifactId>
-            <version>5.5.13.4</version>
+            <artifactId>itext-core</artifactId>
+            <version>9.0.0</version>
         </dependency>
 
         <dependency>
